--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,10 @@
     "csurf": "^1.11.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "express-session": "^1.18.2",
     "helmet": "^8.1.0",
+    "lusca": "^1.7.0",
     "pg": "^8.16.3",
     "pino": "^9.9.0",
     "pino-http": "^10.5.0",
